// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render Accordion in default state 1`] = `
.c1 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c2 {
  display: none;
  box-sizing: border-box;
}

.c3 {
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: none;
}

.c0 {
  color: #3C64F4;
  cursor: pointer;
}

@media (min-width:0px) {
  .c3 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (min-width:720px) {
  .c3 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

<div>
  <div
    class="c0"
  >
    title
    <svg
      aria-labelledby="bd-icon-1"
      class="c1"
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M24 24H0V0h24v24z"
        fill="none"
        opacity="0.87"
      />
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29a.996.996 0 10-1.41 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59a.996.996 0 000-1.41c-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </div>
  <div
    class="c2 c3"
    display="none"
  />
</div>
`;

exports[`switch Accordion to expanded state 1`] = `
.c1 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
}

.c3 {
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  color: #3C64F4;
  cursor: pointer;
}

@media (min-width:0px) {
  .c3 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (min-width:720px) {
  .c3 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

<div>
  <div
    class="c0"
  >
    title
    <svg
      aria-labelledby="bd-icon-2"
      class="c1"
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M11.29 8.71L6.7 13.3a.996.996 0 101.41 1.41L12 10.83l3.88 3.88a.996.996 0 101.41-1.41L12.7 8.71a.996.996 0 00-1.41 0z"
      />
    </svg>
  </div>
  <div
    class="c2 c3"
    display="flex"
  />
</div>
`;

exports[`toggle content visibility 1`] = `
.c1 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
}

.c3 {
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  color: #3C64F4;
  cursor: pointer;
}

@media (min-width:0px) {
  .c3 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (min-width:720px) {
  .c3 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

<div>
  <div
    class="c0"
  >
    title
    <svg
      aria-labelledby="bd-icon-2"
      class="c1"
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M11.29 8.71L6.7 13.3a.996.996 0 101.41 1.41L12 10.83l3.88 3.88a.996.996 0 101.41-1.41L12.7 8.71a.996.996 0 00-1.41 0z"
      />
    </svg>
  </div>
  <div
    class="c2 c3"
    display="flex"
  />
</div>
`;

exports[`toggle content visibility 2`] = `
<div>
  <div
    class="styled__StyledTitle-sc-10nkrcr-0 cFktma"
  >
    title
    .c0 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

<svg
      aria-labelledby="bd-icon-3"
      class="c0"
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M24 24H0V0h24v24z"
        fill="none"
        opacity="0.87"
      />
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29a.996.996 0 10-1.41 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59a.996.996 0 000-1.41c-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </div>
  <div
    class="styled__StyledBox-sj5f1m-0 jBQGQm styled__StyledFlex-hcvk8l-0 entofW"
    display="none"
  />
</div>
`;

exports[`toggle title 1`] = `
.c1 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c0 {
  color: #3C64F4;
  cursor: pointer;
}

<div
  class="c0"
>
  Show less
  <svg
    aria-labelledby="bd-icon-2"
    class="c1"
    fill="currentColor"
    height="24"
    stroke="currentColor"
    stroke-width="0"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M0 0h24v24H0V0z"
      fill="none"
    />
    <path
      d="M11.29 8.71L6.7 13.3a.996.996 0 101.41 1.41L12 10.83l3.88 3.88a.996.996 0 101.41-1.41L12.7 8.71a.996.996 0 00-1.41 0z"
    />
  </svg>
</div>
`;

exports[`toggle title 2`] = `
<div
  class="styled__StyledTitle-sc-10nkrcr-0 cFktma"
>
  Show more
  .c0 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

<svg
    aria-labelledby="bd-icon-2"
    class="c0"
    fill="currentColor"
    height="24"
    stroke="currentColor"
    stroke-width="0"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M24 24H0V0h24v24z"
      fill="none"
      opacity="0.87"
    />
    <path
      d="M15.88 9.29L12 13.17 8.12 9.29a.996.996 0 10-1.41 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59a.996.996 0 000-1.41c-.39-.38-1.03-.39-1.42 0z"
    />
  </svg>
</div>
`;
